# wind-ui-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.en.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-fix-report.md  task-2-report.md
docs/: API_GUIDE.md  DESIGN.md  DEVELOPMENT.md  MACOS_PORTING.md  ROADMAP.md  animation-design.md  image-design.md
docs/superpowers/plans/: 2026-06-25-d2d-backend.md
docs/superpowers/specs/: 2026-06-17-image-support-design.md  2026-06-25-d2d-backend-design.md
examples/: about.rs  animation.rs  background_task.rs  dropdown.rs  dyn_list.rs  emoji.rs  file_drop.rs  frameless.rs  fullshowcase.rs  image.rs  ime.rs  ime_settings.rs  light_titlebar.rs  list.rs  multiline.rs  multiline_demo.rs  phase0_window.rs  phase1_layout.rs  phase2_text.rs  phase3_button.rs  phase4_form.rs  phase5_containers.rs  progress.rs  settings.rs  theming.rs  toast.rs  tray.rs
scripts/: screenshots.ps1
src/: anim.rs  app.rs  core.rs  event.rs  geometry.rs  lib.rs  signal.rs  spec.rs  style.rs  sync.rs  theme.rs
src/platform/: mod.rs
src/platform/macos/: clipboard.rs  mod.rs  tray.rs  window.rs
src/platform/win32/: clipboard.rs  d2d.rs  mod.rs  tray.rs
src/render/: image.rs  mod.rs  prof.rs  skia.rs
src/single_instance/: mod.rs  unix.rs  win.rs
src/text/: coretext.rs  dwrite.rs  mod.rs
src/ui/: containers.rs  dyn_list.rs  image.rs  inputs.rs  link.rs  list.rs  mod.rs  nav.rs  progress.rs  segmented.rs  select.rs  sortable_table.rs  stepper.rs  window_buttons.rs
