[package]
name = "windui"
version = "0.1.0"
edition = "2021"
description = "轻量 Windows 桌面 GUI：Win32 + GDI 呈现 + tiny-skia + DirectWrite"
license = "MIT"

[features]
# SVG 支持默认开启；体积敏感可 `--no-default-features` 关掉以剔除 resvg/usvg 依赖树。
default = ["svg"]
svg = ["dep:resvg"]
# SVG 内嵌文字渲染（默认关）：开 resvg 文字栈 + 系统字体加载。代价是依赖体积增大、首次解码
# SVG 时扫描系统字体——纯图标场景无需开启，需要时 `--features svg-text` 显式启用。
svg-text = ["svg", "resvg/text", "resvg/system-fonts"]

[dependencies]
# 与 resvg 0.47 对齐到同一 tiny-skia 版本，避免依赖树编译两份。
tiny-skia = "0.12"
# SVG 光栅化：resvg 渲染后端即 tiny-skia（与本项目同源）。关默认特性以剔除字体/栅格图等重依赖，
# 只保留矢量路径渲染（含文字的 SVG 不渲染文字，图标场景足够）。
resvg = { version = "0.47", optional = true, default-features = false }
# #[implement] 宏展开会引用 windows_core crate 名，需作为直接依赖暴露。
windows-core = "0.58"
# 主题配置（TOML 映射）。
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_DirectWrite",
    "Win32_Media",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Touch",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
